# skeleton-python

./: pyproject.toml
